--- a/src/main/resources/META-INF/rewrite/eslint-plugin-jest.yml
+++ b/src/main/resources/META-INF/rewrite/eslint-plugin-jest.yml
@@ -21,7 +21,7 @@ description: Recipes that cleanup Jest code.
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.RecommendedJestCodeCleanup
 displayName: Recommended Jest code cleanup
-description: |
+description: |-
   Collection of cleanup ESLint rules that are recommended by [eslint-plugin-jest](https://github.com/jest-community/eslint-plugin-jest).
 recipeList:
   - org.openrewrite.codemods.ESLint:
@@ -54,7 +54,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -64,9 +64,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.NoDeprecatedFunctions27
 displayName: Disallow use of deprecated functions from before version 27
-description: |
+description: |-
   Disallow use of deprecated functions from before version 27
-  See rule details for [jest/no-deprecated-functions](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-deprecated-functions.md)
+  See rule details for [jest/no-deprecated-functions](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-deprecated-functions.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -89,7 +89,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -99,9 +99,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.ConsistentTestIt
 displayName: Enforce test and it usage conventions
-description: |
+description: |-
   Enforce test and it usage conventions
-  See rule details for [jest/consistent-test-it](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/consistent-test-it.md)
+  See rule details for [jest/consistent-test-it](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/consistent-test-it.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -119,7 +119,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -128,9 +128,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.NoAliasMethods
 displayName: Disallow alias methods
-description: |
+description: |-
   Disallow alias methods
-  See rule details for [jest/no-alias-methods](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-alias-methods.md)
+  See rule details for [jest/no-alias-methods](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-alias-methods.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -148,7 +148,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -157,9 +157,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.NoJasmineGlobals
 displayName: Disallow Jasmine globals
-description: |
+description: |-
   Disallow Jasmine globals
-  See rule details for [jest/no-jasmine-globals](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-jasmine-globals.md)
+  See rule details for [jest/no-jasmine-globals](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-jasmine-globals.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -177,7 +177,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -186,9 +186,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.NoTestPrefixes
 displayName: Require using .only and .skip over f and x
-description: |
+description: |-
   Require using .only and .skip over f and x
-  See rule details for [jest/no-test-prefixes](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-test-prefixes.md)
+  See rule details for [jest/no-test-prefixes](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-test-prefixes.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -206,7 +206,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -215,9 +215,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.NoUntypedMockFactory
 displayName: Disallow using jest.mock() factories without an explicit type parameter
-description: |
+description: |-
   Disallow using jest.mock() factories without an explicit type parameter
-  See rule details for [jest/no-untyped-mock-factory](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-untyped-mock-factory.md)
+  See rule details for [jest/no-untyped-mock-factory](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/no-untyped-mock-factory.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -235,7 +235,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -244,9 +244,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferComparisonMatcher
 displayName: Suggest using the built-in comparison matchers
-description: |
+description: |-
   Suggest using the built-in comparison matchers
-  See rule details for [jest/prefer-comparison-matcher](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-comparison-matcher.md)
+  See rule details for [jest/prefer-comparison-matcher](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-comparison-matcher.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -264,7 +264,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -273,9 +273,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferExpectResolves
 displayName: Prefer await expect(...).resolves over expect(await ...) syntax
-description: |
+description: |-
   Prefer await expect(...).resolves over expect(await ...) syntax
-  See rule details for [jest/prefer-expect-resolves](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-expect-resolves.md)
+  See rule details for [jest/prefer-expect-resolves](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-expect-resolves.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -293,7 +293,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -302,9 +302,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferLowercaseTitle
 displayName: Enforce lowercase test names
-description: |
+description: |-
   Enforce lowercase test names
-  See rule details for [jest/prefer-lowercase-title](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-lowercase-title.md)
+  See rule details for [jest/prefer-lowercase-title](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-lowercase-title.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -322,7 +322,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -331,9 +331,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferMockPromiseShorthand
 displayName: Prefer mock resolved/rejected shorthands for promises
-description: |
+description: |-
   Prefer mock resolved/rejected shorthands for promises
-  See rule details for [jest/prefer-mock-promise-shorthand](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-mock-promise-shorthand.md)
+  See rule details for [jest/prefer-mock-promise-shorthand](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-mock-promise-shorthand.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -351,7 +351,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -360,9 +360,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferSpyOn
 displayName: Suggest using jest.spyOn()
-description: |
+description: |-
   Suggest using jest.spyOn()
-  See rule details for [jest/prefer-spy-on](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-spy-on.md)
+  See rule details for [jest/prefer-spy-on](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-spy-on.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -380,7 +380,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -389,9 +389,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferToBe
 displayName: Suggest using toBe() for primitive literals
-description: |
+description: |-
   Suggest using toBe() for primitive literals
-  See rule details for [jest/prefer-to-be](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-to-be.md)
+  See rule details for [jest/prefer-to-be](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-to-be.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -409,7 +409,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -418,9 +418,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferToContain
 displayName: Suggest using toContain()
-description: |
+description: |-
   Suggest using toContain()
-  See rule details for [jest/prefer-to-contain](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-to-contain.md)
+  See rule details for [jest/prefer-to-contain](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-to-contain.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -438,7 +438,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -447,9 +447,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferToHaveLength
 displayName: Suggest using toHaveLength()
-description: |
+description: |-
   Suggest using toHaveLength()
-  See rule details for [jest/prefer-to-have-length](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-to-have-length.md)
+  See rule details for [jest/prefer-to-have-length](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-to-have-length.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -467,7 +467,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -476,9 +476,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.PreferTodo
 displayName: Suggest using test.todo
-description: |
+description: |-
   Suggest using test.todo
-  See rule details for [jest/prefer-todo](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-todo.md)
+  See rule details for [jest/prefer-todo](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/prefer-todo.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -496,7 +496,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
@@ -505,9 +505,9 @@ tags:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.jest.ValidTitle
 displayName: Enforce valid titles
-description: |
+description: |-
   Enforce valid titles
-  See rule details for [jest/valid-title](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/valid-title.md)
+  See rule details for [jest/valid-title](https://github.com/jest-community/eslint-plugin-jest/blob/HEAD/docs/rules/valid-title.md).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -525,7 +525,7 @@ recipeList:
             "node": true,
             "jest": true
           }
-        }
+        }.
 tags:
   - ESLint
   - Jest
