--- a/src/main/resources/META-INF/rewrite/material-ui.yml
+++ b/src/main/resources/META-INF/rewrite/material-ui.yml
@@ -85,7 +85,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.migrate.mui.GridVProps
-displayName: Updates the usage of the `@mui/material/Grid2`, `@mui/system/Grid`, and `@mui/joy/Grid` components to their updated APIs.
+displayName: Updates the usage of the `@mui/material/Grid2`, `@mui/system/Grid`, and `@mui/joy/Grid` components to their updated APIs
 description: >-
   See Material UI codemod projects for more [details](https://github.com/mui/material-ui/tree/master/packages/mui-codemod#grid-v2-props).
 tags:
@@ -869,7 +869,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.migrate.mui.ThemeAugment
-displayName: Adds `DefaultTheme` module augmentation to typescript projects.
+displayName: Adds `DefaultTheme` module augmentation to typescript projects
 description: >-
   See Material UI codemod projects for more [details](https://github.com/mui/material-ui/tree/master/packages/mui-codemod#theme-augment).
 tags:
