--- a/src/main/resources/META-INF/rewrite/base-eslint.yml
+++ b/src/main/resources/META-INF/rewrite/base-eslint.yml
@@ -16,9 +16,9 @@
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.ArrowBodyStyle
 displayName: Require braces around arrow function bodies
-description: |
+description: |-
   Require braces around arrow function bodies
-  See [rule details](https://eslint.org/docs/latest/rules/arrow-body-style)
+  See [rule details](https://eslint.org/docs/latest/rules/arrow-body-style).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -39,9 +39,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.CapitalizedComments
 displayName: Enforce or disallow capitalization of the first letter of a comment
-description: |
+description: |-
   Enforce or disallow capitalization of the first letter of a comment 
-  See [rule details](https://eslint.org/docs/latest/rules/capitalized-comments)
+  See [rule details](https://eslint.org/docs/latest/rules/capitalized-comments).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -62,9 +62,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.Curly
 displayName: Enforce consistent brace style for all control statements
-description: |
+description: |-
   Enforce consistent brace style for all control statements 
-  See [rule details](https://eslint.org/docs/latest/rules/curly)
+  See [rule details](https://eslint.org/docs/latest/rules/curly).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -85,9 +85,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.DotNotation
 displayName: Enforce dot notation whenever possible
-description: |
+description: |-
   Enforce dot notation whenever possible 
-  See [rule details](https://eslint.org/docs/latest/rules/dot-notation)
+  See [rule details](https://eslint.org/docs/latest/rules/dot-notation).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -108,9 +108,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.Eqeqeq
 displayName: Require the use of `===` and `!==`
-description: |
+description: |-
   Require the use of `===` and `!==` 
-  See [rule details](https://eslint.org/docs/latest/rules/eqeqeq)
+  See [rule details](https://eslint.org/docs/latest/rules/eqeqeq).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -131,9 +131,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.LogicalAssignmentOperators
 displayName: Require or disallow logical assignment operator shorthand
-description: |
+description: |-
   Require or disallow logical assignment operator shorthand 
-  See [rule details](https://eslint.org/docs/latest/rules/logical-assignment-operators)
+  See [rule details](https://eslint.org/docs/latest/rules/logical-assignment-operators).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -154,9 +154,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.MultilineCommentStyle
 displayName: Enforce a particular style for multiline comments
-description: |
+description: |-
   Enforce a particular style for multiline comments 
-  See [rule details](https://eslint.org/docs/latest/rules/multiline-comment-style)
+  See [rule details](https://eslint.org/docs/latest/rules/multiline-comment-style).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -177,9 +177,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoDivRegex
 displayName: Disallow equal signs explicitly at the beginning of regular expressions
-description: |
+description: |-
   Disallow equal signs explicitly at the beginning of regular expressions 
-  See [rule details](https://eslint.org/docs/latest/rules/no-div-regex)
+  See [rule details](https://eslint.org/docs/latest/rules/no-div-regex).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -200,9 +200,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoElseReturn
 displayName: Disallow else blocks after return statements in if statements
-description: |
+description: |-
   Disallow else blocks after return statements in if statements 
-  See [rule details](https://eslint.org/docs/latest/rules/no-else-return)
+  See [rule details](https://eslint.org/docs/latest/rules/no-else-return).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -223,9 +223,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoExtraBind
 displayName: Disallow unnecessary calls to `.bind()`
-description: |
+description: |-
   Disallow unnecessary calls to `.bind()` 
-  See [rule details](https://eslint.org/docs/latest/rules/no-extra-bind)
+  See [rule details](https://eslint.org/docs/latest/rules/no-extra-bind).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -246,9 +246,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoExtraLabel
 displayName: Disallow unnecessary labels
-description: |
+description: |-
   Disallow unnecessary labels 
-  See [rule details](https://eslint.org/docs/latest/rules/no-extra-label)
+  See [rule details](https://eslint.org/docs/latest/rules/no-extra-label).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -269,9 +269,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoImplicitCoercion
 displayName: Disallow shorthand type conversions
-description: |
+description: |-
   Disallow shorthand type conversions 
-  See [rule details](https://eslint.org/docs/latest/rules/no-implicit-coercion)
+  See [rule details](https://eslint.org/docs/latest/rules/no-implicit-coercion).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -292,9 +292,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoLonelyIf
 displayName: Disallow if statements as the only statement in else blocks
-description: |
+description: |-
   Disallow if statements as the only statement in else blocks 
-  See [rule details](https://eslint.org/docs/latest/rules/no-lonely-if)
+  See [rule details](https://eslint.org/docs/latest/rules/no-lonely-if).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -315,9 +315,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUndefInit
 displayName: Disallow initializing variables to undefined
-description: |
+description: |-
   Disallow initializing variables to undefined 
-  See [rule details](https://eslint.org/docs/latest/rules/no-undef-init)
+  See [rule details](https://eslint.org/docs/latest/rules/no-undef-init).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -338,9 +338,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUnneededTernary
 displayName: Disallow ternary operators when simpler alternatives exist
-description: |
+description: |-
   Disallow ternary operators when simpler alternatives exist 
-  See [rule details](https://eslint.org/docs/latest/rules/no-unneeded-ternary)
+  See [rule details](https://eslint.org/docs/latest/rules/no-unneeded-ternary).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -361,9 +361,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUselessComputedKey
 displayName: Disallow unnecessary computed property keys in objects and classes
-description: |
+description: |-
   Disallow unnecessary computed property keys in objects and classes 
-  See [rule details](https://eslint.org/docs/latest/rules/no-useless-computed-key)
+  See [rule details](https://eslint.org/docs/latest/rules/no-useless-computed-key).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -384,9 +384,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUselessRename
 displayName: Disallow renaming import, export, and destructured assignments to the same name
-description: |
+description: |-
   Disallow renaming import, export, and destructured assignments to the same name
-  See [rule details](https://eslint.org/docs/latest/rules/no-useless-rename)
+  See [rule details](https://eslint.org/docs/latest/rules/no-useless-rename).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -407,9 +407,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUselessReturn
 displayName: Disallow redundant return statements
-description: |
+description: |-
   Disallow redundant return statements 
-  See [rule details](https://eslint.org/docs/latest/rules/no-useless-return)
+  See [rule details](https://eslint.org/docs/latest/rules/no-useless-return).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -430,9 +430,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoVar
 displayName: Require `let` or `const` instead of `var`
-description: |
+description: |-
   Require `let` or `const` instead of `var` 
-  See [rule details](https://eslint.org/docs/latest/rules/no-var)
+  See [rule details](https://eslint.org/docs/latest/rules/no-var).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -453,9 +453,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.ObjectShorthand
 displayName: Require or disallow method and property shorthand syntax for object literals
-description: |
+description: |-
   Require or disallow method and property shorthand syntax for object literals 
-  See [rule details](https://eslint.org/docs/latest/rules/object-shorthand)
+  See [rule details](https://eslint.org/docs/latest/rules/object-shorthand).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -476,9 +476,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.OneVar
 displayName: Enforce variables to be declared either together or separately in functions
-description: |
+description: |-
   Enforce variables to be declared either together or separately in functions 
-  See [rule details](https://eslint.org/docs/latest/rules/one-var)
+  See [rule details](https://eslint.org/docs/latest/rules/one-var).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -499,9 +499,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.OperatorAssignment
 displayName: Require or disallow assignment operator shorthand where possible
-description: |
+description: |-
   Require or disallow assignment operator shorthand where possible 
-  See [rule details](https://eslint.org/docs/latest/rules/operator-assignment)
+  See [rule details](https://eslint.org/docs/latest/rules/operator-assignment).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -522,9 +522,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferArrowCallback
 displayName: Require using arrow functions for callbacks
-description: |
+description: |-
   Require using arrow functions for callbacks 
-  See [rule details](https://eslint.org/docs/latest/rules/prefer-arrow-callback)
+  See [rule details](https://eslint.org/docs/latest/rules/prefer-arrow-callback).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -545,9 +545,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferConst
 displayName: Require const declarations for variables that are never reassigned after declared
-description: |
+description: |-
   Require const declarations for variables that are never reassigned after declared 
-  See [rule details](https://eslint.org/docs/latest/rules/prefer-const)
+  See [rule details](https://eslint.org/docs/latest/rules/prefer-const).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -568,9 +568,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferDestructuring
 displayName: Require destructuring from arrays and/or objects
-description: |
+description: |-
   Require destructuring from arrays and/or objects 
-  See [rule details](https://eslint.org/docs/latest/rules/prefer-destructuring)
+  See [rule details](https://eslint.org/docs/latest/rules/prefer-destructuring).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -591,9 +591,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferExponentiationOperator
 displayName: Disallow the use of `Math.pow` in favor of the ** operator
-description: |
+description: |-
   Disallow the use of `Math.pow` in favor of the ** operator 
-  See [rule details](https://eslint.org/docs/latest/rules/prefer-exponentiation-operator)
+  See [rule details](https://eslint.org/docs/latest/rules/prefer-exponentiation-operator).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -614,9 +614,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferNumericLiterals
 displayName: Disallow `parseInt()` and `Number.parseInt()` in favor of binary, octal, and hexadecimal literals
-description: |
+description: |-
   Disallow `parseInt()` and `Number.parseInt()` in favor of binary, octal, and hexadecimal literals 
-  See [rule details](https://eslint.org/docs/latest/rules/prefer-numeric-literals)
+  See [rule details](https://eslint.org/docs/latest/rules/prefer-numeric-literals).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -637,9 +637,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferObjectHasOwn
 displayName: Disallow use of `Object.prototype.hasOwnProperty.call()` and prefer use of `Object.hasOwn(`)
-description: |
+description: |-
   Disallow use of `Object.prototype.hasOwnProperty.call()` and prefer use of `Object.hasOwn(`) 
-  See [rule details](https://eslint.org/docs/latest/rules/prefer-object-has-own)
+  See [rule details](https://eslint.org/docs/latest/rules/prefer-object-has-own).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -660,9 +660,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferObjectSpread
 displayName: Disallow using `Object.assign` with an object literal as the first argument and prefer the use of object spread instead
-description: |
+description: |-
   Disallow using `Object.assign` with an object literal as the first argument and prefer the use of object spread instead 
-  See [rule details](https://eslint.org/docs/latest/rules/prefer-object-spread)
+  See [rule details](https://eslint.org/docs/latest/rules/prefer-object-spread).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -683,9 +683,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferTemplate
 displayName: Require template literals instead of string concatenation
-description: |
+description: |-
   Require template literals instead of string concatenation 
-  See [rule details](https://eslint.org/docs/latest/rules/prefer-template)
+  See [rule details](https://eslint.org/docs/latest/rules/prefer-template).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -706,9 +706,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.SortImports
 displayName: Enforce sorted import declarations within modules
-description: |
+description: |-
   Enforce sorted import declarations within modules 
-  See [rule details](https://eslint.org/docs/latest/rules/sort-imports)
+  See [rule details](https://eslint.org/docs/latest/rules/sort-imports).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -729,9 +729,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.SortVars
 displayName: Require variables within the same declaration block to be sorted
-description: |
+description: |-
   Require variables within the same declaration block to be sorted 
-  See [rule details](https://eslint.org/docs/latest/rules/sort-vars)
+  See [rule details](https://eslint.org/docs/latest/rules/sort-vars).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -752,9 +752,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.Strict
 displayName: Require or disallow strict mode directives
-description: |
+description: |-
   Require or disallow strict mode directives 
-  See [rule details](https://eslint.org/docs/latest/rules/strict)
+  See [rule details](https://eslint.org/docs/latest/rules/strict).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -775,9 +775,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.Yoda
 displayName: Require or disallow "Yoda" conditions
-description: |
+description: |-
   Require or disallow "Yoda" conditions
-  See [rule details](https://eslint.org/docs/latest/rules/yoda)
+  See [rule details](https://eslint.org/docs/latest/rules/yoda).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
@@ -798,9 +798,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.UnicodeBom
 displayName: Require or disallow Unicode byte order mark (BOM)
-description: |
+description: |-
   Require or disallow Unicode byte order mark (BOM) 
-  See [rule details](https://eslint.org/docs/latest/rules/unicode-bom)
+  See [rule details](https://eslint.org/docs/latest/rules/unicode-bom).
 recipeList:
   - org.openrewrite.codemods.ESLint:
       fix: true
