--- a/src/main/resources/META-INF/rewrite/migrate.yml
+++ b/src/main/resources/META-INF/rewrite/migrate.yml
@@ -21,7 +21,7 @@ description: Recipes that modernize the use of [Lodash](https://lodash.com/).
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.migrate.lodash.LodashUnderscoreArray
 displayName: Replace lodash and underscore array functions with native JavaScript
-description: |
+description: |-
   - `_.head(x)` -> `x[0]`
   - `_.head(x, n)` -> `x.slice(n)`
   - `_.first` (alias for `_.head`)
@@ -29,7 +29,7 @@ description: |
   - `_.tail(x, n)` -> `x.slice(n)`
   - `_.rest` (alias for `_.tail`)
   - `_.last(x)` -> `x[x.length - 1]`
-  - `_.last(x, n)` -> `x.slice(x.length - n)`
+  - `_.last(x, n)` -> `x.slice(x.length - n)`.
 tags:
   - codemods
   - lodash
@@ -41,9 +41,9 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.migrate.lodash.LodashUnderscoreFunction
 displayName: Replace lodash and underscore function functions with native JavaScript
-description: |
+description: |-
   - `_.bind(fn, obj, ...x)` -> `fn.bind(obj, ...x)`
-  - `_.partial(fn, a, b);` -> `(...args) => fn(a, b, ...args)`
+  - `_.partial(fn, a, b);` -> `(...args) => fn(a, b, ...args)`.
 tags:
   - codemods
   - lodash
@@ -55,13 +55,13 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.migrate.lodash.LodashUnderscoreObjects
 displayName: Replace lodash and underscore object functions with native JavaScript
-description: |
+description: |-
   - `_.clone(x)` -> `{ ...x }`
   - `_.extend({}, x, y)` -> `{ ...x, ...y }`
   - `_.extend(obj, x, y)` -> `Object.assign(obj, x, y)`
   - `_.keys(x)` -> `Object.keys(x)`
   - `_.pairs(x)` -> `Object.entries(x)`
-  - `_.values(x)` -> `Object.values(x)`
+  - `_.values(x)` -> `Object.values(x)`.
 tags:
   - codemods
   - lodash
@@ -73,14 +73,14 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.migrate.lodash.LodashUnderscoreUtil
 displayName: Replace lodash and underscore utility functions with native JavaScript
-description: |
+description: |-
   - `_.isArray(x)` -> `Array.isArray(x)`
   - `_.isBoolean(x)` -> `typeof(x) === 'boolean'`
   - `_.isFinite(x)` -> `Number.isFinite(x)`
   - `_.isFunction(x)` -> `typeof(x) === 'function'`
   - `_.isNull(x)` -> `x === null`
   - `_.isString(x)` -> `typeof(x) === 'string'`
-  - `_.isUndefined(x)` -> `typeof(x) === 'undefined'`
+  - `_.isUndefined(x)` -> `typeof(x) === 'undefined'`.
 tags:
   - codemods
   - lodash
